<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.application_animal_shelter.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
    </fragment>

    <fragment
        android:id="@+id/nav_residents"
        android:name="com.example.application_animal_shelter.ui.residents.residents"
        android:label="@string/menu_residents"
        tools:layout="@layout/fragment_resident_list" />

    <fragment
        android:id="@+id/nav_news"
        android:name="com.example.application_animal_shelter.ui.news.NewsFragment"
        android:label="@string/menu_news"
        tools:layout="@layout/fragment_news" />

    <fragment
        android:id="@+id/nav_join"
        android:name="com.example.application_animal_shelter.ui.join.JoinFragment"
        android:label="@string/menu_join"
        tools:layout="@layout/fragment_join" />

    <fragment
        android:id="@+id/nav_contact"
        android:name="com.example.application_animal_shelter.ui.contact.ContactFragment"
        android:label="@string/menu_contact"
        tools:layout="@layout/fragment_contact" />

</navigation>